# Thesis-Project

./: 6_point_3D_model.txt  CMakeLists.txt  Convolutional.cpp  Convolutional.h  Graphics.cpp  Graphics.h  Main.tex  Mat2HDF5.m  README.md  Regressor.cpp  allages.txt  centers.txt  forestDB.m  forest_algorithm.m  my_solver.prototxt  presentation.md  run_caffe.sh  run_program_command.sh  temp_forest_algorithm.m  tempforest.cpp  tempforest.m  tests.txt  train_test.prototxt  valgrind_out.txt  webcam_face_pose_ex.cpp
python/pytorch/: CMakeLists.txt  all_runs.txt  dataloader.py  extract.sh  forestDB.py  forestDB_3fold.py  main.py  main_resnet18.py  main_resnet18_PARAMETRIC.py  modelLoader.py  model_trace.py  multiviewDB.py  ok.cpp  preprocess_multiview.py  run_tensorboard.sh  save_UT_Multiview.txt  torch2caffe.py  valgrind.sh
python/pytorch/Runs/Zhang_40/: events.out.tfevents.1566406798.f05d82be4b8f
python/pytorch/Runs/resnet6_basic/: script.py  script.py~
python/pytorch/diagrams/: plots.py  plots.py~  plots_std.py  plots_std.py~
python/pytorch/diagrams/cross_dataset/: histogram.py  histogram.py~
python/pytorch/diagrams/per_participant_mpiigaze/: histogram.py
python/pytorch/diagrams/resnet6_basic/: histobar.py  histobar.py~  test_mean.txt  test_stdev.txt
python/pytorch/diagrams/resnet8_preact_basic/: histobar.py  histobar.py~  plots.py~  test_mean.txt  train_time.txt
python/pytorch/diagrams/resnet8_preact_bottleneck/: histobar.py  (+3 more)
python/pytorch/models/: .#resnet_basic.py  mynet.py  myresnet_basic.py  resnet_basic.py  resnet_basic.py~  resnet_preact.py  zhang.py
(+92 files in other folders)
